syntax = "proto3";

import "common/common.proto";

option go_package = "github.com/xncc/protos/configuration";
option java_package = "com.xiangna.www.protos.configuration";

package protos;

//======================================================订单流程信息=======================================

// 订单节点数据
message ContractStep {
    string step_id = 1; // 订单阶段ID
    string step_name = 2; // 订单阶段名称
    AppVo org = 3; // 此阶段分属机构
    string remark = 4; // 备注
    bool is_start_node = 5; // 是否是开始节点
    bool is_end_node = 6; // 是否是结束节点
    string oa_url = 7; // 每个节点都可以调用外部 URL
    OperateInfo operate_info = 8;
}

// 订单流程数据
message ContractFlow {
    ContractStep current_step = 1;
    ContractStep next = 2;
    OperateInfo operate_info = 3;
}
