syntax = "proto3";

import "common/common.proto";
import "configuration/appconfig.proto";
import "contract/contract_data.proto";
import "contract/contract_status.proto";

option go_package = "github.com/xncc/protos/contract";
option java_package = "com.xiangna.www.protos.contract";

package protos;

// ========================================银行保理双方账本数据定义===========================================
// 融资申请订单
// 保理到银行贷款融资申请订单
message BankLoanContract {
    string order_no = 1; // 订单编号

    CommercialOrg factoring = 2; // 保理公司信息
    CommercialOrg bank_info = 3; // 银行信息

    ContractFormData contract_data = 4; // 订单数据
    repeated FinancingContractReview financing_contract_reviews = 5; // 质押的供应商到保理融资申请订单
    ContractMoneyCount money_count = 6; // 订单金额汇总

    ContractStatus contract_status = 7; // 订单状态
    repeated ContractStatus step_history = 8; // 订单状态历史记录
    OperateInfo operate_info = 9; // 数据操作信息

}

// 保理到银行贷款融资申请订单质押的供应商融资申请订单
message FinancingContractReview {
    string financing_order_no = 1; // 质押的融资订单编号
    int64 order_amount = 2; // 质押的融资订单融资总金额
    int32 financing_period = 3; // 融资期限(天)
    int64 order_expired_time = 4; // 质押的融资订单的过期时间(unix时间戳)

    // 保理申请的融资金额
    int64 expect_amount = 5; // 保理申请的融资金额
    int64 expect_rate = 6; // 保理申请的融资利率

    // 银行审批确认的融资金额
    int64 confirm_amount = 7; // 银行审批确认的融资金额
    int64 confirm_rate = 8; // 银行审批确认的融资利率
    int64 confirm_expired_time = 9; // 银行审批确认的融资过期时间(unix时间戳)

}