syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "configuration/contractflow.proto";

option go_package = "github.com/xncc/protos/contract";
option java_package = "com.xiangna.www.protos.contract";

package protos;

// ==============================订单状态=====================================================

// 订单状态
message ContractStatus {
    ContractStep current_step = 1; // 当前订单阶段
    repeated ContractStepCheckData check_datas = 2; // 是否已通过认所有确认项
    repeated ContractCheckFlowInfo check_flow_infos = 3; // 申请订单审批流数据(历史记录)
    repeated ContractStep step_history = 5; // 订单阶段历史记录
}

// 订单审核流程信息
message ContractCheckFlowInfo {
    ContractStep contract_step = 1; // 订单阶段
    ContractCheckFlowData check_flow_datas = 2; // 订单审核流程数据
}

// 订单审核流程数据
message ContractCheckFlowData {
    AppVo check_app = 1; // 审核App
    string check_user_name = 2; // 审核操作员名称
    string check_user_mobile = 3; // 审核操作员手机号
    google.protobuf.Timestamp check_time = 4; // 审核时间
    string check_ip = 5; // 审核操作员IP
    string status = 6; // 流程审批状态
    string remark = 7; // 流程审批备注
}

// 具体阶段的检查确认项
message ContractStepCheckData {
    ContractStep current_step = 1; // 订单阶段
    repeated CheckData check_datas = 2;
}

// 检查项的内容
message CheckData {
    AppVo org = 1; // 此阶段分属机构
    string title = 2; // 确认项
    string value = 3; //确认结果

}