syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "contract/contract_data.proto";
import "contract/contract_status.proto";

option go_package = "github.com/xncc/protos/contract";
option java_package = "com.xiangna.www.protos.contract";

package protos;

// ======================================三方账本融资申请订单数据=============================================
// 供应商到保理融资申请订单
message FinancingContract {
    string order_no = 1; // 订单编号

    AppVo supplier = 2; // 供应商信息
    AppVo enterprise = 3; // 核心企业信息
    AppVo factoring = 4; // 保理公司信息

    ContractData contract_data = 5; // 订单数据
    repeated FinancingInvoice invoices = 6; // 供应商提供的发票数据
    ContractMoneyCount money_count = 8; // 订单金额汇总

    ContractStatus contract_status = 9; // 订单状态
    OperateInfo operate_info = 10; // 数据操作信息

}

// 一张发票的融资信息
message FinancingInvoice {
    Invoice invoice = 1; // 供应商发票信息
    int64 expect_amount = 2; // 申请融资金额
    int64 confirm_amount = 3; // 审核确认可融资金额
    int64 confirm_rate = 4; // 融资利率
    google.protobuf.Timestamp confirm_pay_time = 5; // 保理融资发放日期
    google.protobuf.Timestamp confirm_return_time = 6; // 应收账款还款日期
    google.protobuf.Timestamp confirm_end_time = 7; // 保理融资到期日期
    string confirm_rate_desc = 8; // 利息计收方式
    string confirm_urge_return_desc = 9; // 应收账款催收方式
}

// 供应商发票信息
message Invoice {
    string invoice_no = 1; // 发票编号
    int64 invoice_amount = 2; // 应收账款发票金额
    google.protobuf.Timestamp invoice_time = 3; // 开票日期
    AppVo supplier = 4; // 销售方
    AppVo enterprise = 5; // 购买方
    string remark = 6; // 备注
    repeated LedgerFile notes = 7; // 发票扫描件(图)
    OperateInfo operate_info = 8; // 数据操作信息
}





